--- a/appmanifest.json
+++ b/appmanifest.json
@@ -1,6 +1,6 @@
 ﻿{
-	"name": "Bad Time Simulator (Sans Fight)",
-	"short_name": "Bad Time Simulator (Sans Fight)",
+	"name": "MCS Time Simulator (Sans Fight)",
+	"short_name": "MCS Time Simulator (Sans Fight)",
 	"start_url": "index.html",
 	"display": "fullscreen",
 	"orientation": "any",
